# OpenCV-HOGSVM-wrapper

./: CMakeLists.txt  README.md  hogsvm.cpp  hogsvm.h
include/: hogsvm.h
src/: hogsvm.cpp
